[workspace]

resolver = "2"

members = [
    "daily-contest-67",
    "daily-contest-72",
    "daily-contest-73",
    "daily-contest-74",
    "daily-contest-78",
    "daily-contest-79",
    "daily-contest-82",
    "daily-contest-84",
    "daily-contest-85",
    "daily-contest-88",
    "daily-contest-89",
    "mayocorn-20230915",
    "trooooche_20231024",
    "tsuna_20231030",
    "shinnshinn_20231103",
    "mayocorn-20231122",
    "mayocorn-20231123",
    "MoSooN-20231125",
    "mayocorn-20231128",
    "mayocorn-20231130",
    "mayocorn-20231203",
    "mayocorn-20231226",
    "mayocorn-20231229",
    "new-years-eve-2023",
    "mayocorn-20240107",
    "mayocorn-20240109",
    "mayocorn-20240110",
    "mayocorn-20240115",
    "mayocorn-20240117",
    "mayocorn-20240118",
    "mayocorn-20240122",
]
