[workspace]

resolver = "2"

members = [
    "daily-contest-67",
    "daily-contest-72",
    "daily-contest-73",
    "daily-contest-74",
    "daily-contest-78",
    "daily-contest-79",
    "daily-contest-82",
    "daily-contest-84",
    "daily-contest-85",
    "daily-contest-88",
    "daily-contest-89",
    "mayocorn-20230915",
    "trooooche_20231024",
    "tsuna_20231030",
    "shinnshinn_20231103",
    "mayocorn-20231122",
    "mayocorn-20231123",
    "MoSooN-20231125",
    "mayocorn-20231128",
    "mayocorn-20231130",
    "mayocorn-20231203",
    "mayocorn-20231226",
    "mayocorn-20231229",
    "new-years-eve-2023",
    "mayocorn-20240107",
    "mayocorn-20240109",
    "mayocorn-20240110",
    "mayocorn-20240115",
    "mayocorn-20240117",
    "mayocorn-20240118",
    "mayocorn-20240122",
    "mayocorn-20240123",
    "mayocorn-20240124",
    "mayocorn-20240125",
    "mayocorn-20240126",
    "mayocorn-20240128",
    "mayocorn-20240207",
    "mayocorn-20240208",
    "mayocorn-20240209",
    "mayocorn-20240212",
    "mayocorn-20240220",
    "mayocorn-20240222",
    "mayocorn-20240225",
    "mayocorn-20240228",
    "mayocorn-20240304",
    "mayocorn-20240305",
    "mayocorn-20240307",
    "mayocorn-20240311",
    "mayocorn-20240312",
    "mayocorn-20240315",
    "mayocorn-20240318",
    "mayocorn-20240320",
    "mayocorn-20240325",
    "MoSooN-20240326",
    "mayocorn-20240328",
    "mayocorn-20240329",
    "mayocorn-20240401",
    "MoSooN-20240402",
    "mayocorn-20240402",
    "mayocorn-20240403",
    "mayocorn-20240404",
    "MoSooN-20240404",
    "mayocorn-20240408",
    "mayocorn-20240409",
    "MoSooN-20240409",
    "mayocorn-20240414",
    "mayocorn-20240417",
    "mayocorn-20240418",
    "MoSooN-20240422",
    "mayocorn-20240429",
    "mayocorn-20240503",
    "mayocorn-20240506",
    "mayocorn-20240507",
    "mayocorn-20240508",
    "mayocorn-20240513",
    "MoSooN-20240515",
    "mayocorn-20240516",
    "mayocorn-20240520",
    "mayocorn-20240527",
    "MoSooN-20240601",
    "mayocorn-20240605",
    "mayocorn-20240607",
    "mayocorn-20240609",
    "MoSooN-20240618",
    "mayocorn-20240627",
    "mayocorn-20240702",
    "mayocorn-20240730",
    "mayocorn-20240805",
    "mayocorn-20240813",
    "MoSooN-20240814",
    "mayocorn-20240814",
    "MoSooN-20240818",
]
