[package]
name = "new-years-eve-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs = "0.1.1"
once_cell = "1.18.0"
static_assertions = "1.1.0"
varisat = "0.2.2"
memoise = "0.3.2"
argio = "0.2.0"
bitvec = "1.0.1"
counter = "0.5.7"
hashbag = "0.1.11"
pathfinding = "4.3.0"
recur-fn = "2.2.0"
indexing = "0.4.1"
amplify = "3.14.2"
amplify_derive = "2.11.3"
amplify_num = "0.4.1"
easy-ext = "1.0.1"
multimap = "0.9.0"
btreemultimap = "0.1.1"
bstr = "1.6.0"
az = "1.2.1"
glidesort = "0.1.2"
tap = "1.0.1"
omniswap = "0.1.0"
multiversion = "0.7.2"
num = "0.4.1"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-integer = "0.1.45"
num-iter = "0.1.43"
num-rational = "0.4.1"
num-traits = "0.2.15"
num-derive = "0.4.0"
ndarray = "0.15.6"
nalgebra = "0.32.3"
alga = "0.9.3"
libm = "0.2.7"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = "0.2.10"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_hc = "0.3.2"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
petgraph = "0.6.3"
indexmap = "2.0.0"
regex = "1.9.1"
lazy_static = "1.4.0"
ordered-float = "3.7.0"
ascii = "1.1.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.11.0"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.8.1"
im-rc = "15.1.0"
fixedbitset = "0.4.2"
bitset-fixed = "0.1.0"
proconio = { version = "0.4.5", features = ["derive"] }
text_io = "0.1.12"
rustc-hash = "1.1.0"
smallvec = "1.11.0"


[[bin]]
name = "001"
path = "src/bin/001.rs"

[[bin]]
name = "002"
path = "src/bin/002.rs"

[[bin]]
name = "003"
path = "src/bin/003.rs"

[[bin]]
name = "004"
path = "src/bin/004.rs"

[[bin]]
name = "005"
path = "src/bin/005.rs"

[[bin]]
name = "006"
path = "src/bin/006.rs"

[[bin]]
name = "007"
path = "src/bin/007.rs"

[[bin]]
name = "008"
path = "src/bin/008.rs"

[[bin]]
name = "009"
path = "src/bin/009.rs"

[[bin]]
name = "010"
path = "src/bin/010.rs"

[[bin]]
name = "011"
path = "src/bin/011.rs"

[[bin]]
name = "012"
path = "src/bin/012.rs"

[[bin]]
name = "013"
path = "src/bin/013.rs"

[[bin]]
name = "014"
path = "src/bin/014.rs"

[[bin]]
name = "015"
path = "src/bin/015.rs"

[[bin]]
name = "016"
path = "src/bin/016.rs"

[[bin]]
name = "017"
path = "src/bin/017.rs"

[[bin]]
name = "018"
path = "src/bin/018.rs"

[[bin]]
name = "019"
path = "src/bin/019.rs"

[[bin]]
name = "020"
path = "src/bin/020.rs"

[[bin]]
name = "021"
path = "src/bin/021.rs"

[[bin]]
name = "022"
path = "src/bin/022.rs"

[[bin]]
name = "023"
path = "src/bin/023.rs"

[[bin]]
name = "024"
path = "src/bin/024.rs"

[[bin]]
name = "025"
path = "src/bin/025.rs"

[[bin]]
name = "026"
path = "src/bin/026.rs"

[[bin]]
name = "027"
path = "src/bin/027.rs"

[[bin]]
name = "028"
path = "src/bin/028.rs"

[[bin]]
name = "029"
path = "src/bin/029.rs"

[[bin]]
name = "030"
path = "src/bin/030.rs"

[[bin]]
name = "031"
path = "src/bin/031.rs"

[[bin]]
name = "032"
path = "src/bin/032.rs"

[[bin]]
name = "033"
path = "src/bin/033.rs"

[[bin]]
name = "034"
path = "src/bin/034.rs"

[[bin]]
name = "035"
path = "src/bin/035.rs"

[[bin]]
name = "036"
path = "src/bin/036.rs"

[[bin]]
name = "037"
path = "src/bin/037.rs"

[[bin]]
name = "038"
path = "src/bin/038.rs"

[[bin]]
name = "039"
path = "src/bin/039.rs"

[[bin]]
name = "040"
path = "src/bin/040.rs"

[[bin]]
name = "041"
path = "src/bin/041.rs"

[[bin]]
name = "042"
path = "src/bin/042.rs"

[[bin]]
name = "043"
path = "src/bin/043.rs"

[[bin]]
name = "044"
path = "src/bin/044.rs"

[[bin]]
name = "045"
path = "src/bin/045.rs"

[[bin]]
name = "046"
path = "src/bin/046.rs"

[[bin]]
name = "047"
path = "src/bin/047.rs"

[[bin]]
name = "048"
path = "src/bin/048.rs"

[[bin]]
name = "049"
path = "src/bin/049.rs"

[[bin]]
name = "050"
path = "src/bin/050.rs"

[[bin]]
name = "051"
path = "src/bin/051.rs"

[[bin]]
name = "052"
path = "src/bin/052.rs"

[[bin]]
name = "053"
path = "src/bin/053.rs"

[[bin]]
name = "054"
path = "src/bin/054.rs"

[[bin]]
name = "055"
path = "src/bin/055.rs"

[[bin]]
name = "056"
path = "src/bin/056.rs"

[[bin]]
name = "057"
path = "src/bin/057.rs"

[[bin]]
name = "058"
path = "src/bin/058.rs"

[[bin]]
name = "059"
path = "src/bin/059.rs"

[[bin]]
name = "060"
path = "src/bin/060.rs"

[[bin]]
name = "061"
path = "src/bin/061.rs"

[[bin]]
name = "062"
path = "src/bin/062.rs"

[[bin]]
name = "063"
path = "src/bin/063.rs"

[[bin]]
name = "064"
path = "src/bin/064.rs"

[[bin]]
name = "065"
path = "src/bin/065.rs"

[[bin]]
name = "066"
path = "src/bin/066.rs"

[[bin]]
name = "067"
path = "src/bin/067.rs"

[[bin]]
name = "068"
path = "src/bin/068.rs"

[[bin]]
name = "069"
path = "src/bin/069.rs"

[[bin]]
name = "070"
path = "src/bin/070.rs"

[[bin]]
name = "071"
path = "src/bin/071.rs"

[[bin]]
name = "072"
path = "src/bin/072.rs"

[[bin]]
name = "073"
path = "src/bin/073.rs"

[[bin]]
name = "074"
path = "src/bin/074.rs"

[[bin]]
name = "075"
path = "src/bin/075.rs"

[[bin]]
name = "076"
path = "src/bin/076.rs"

[[bin]]
name = "077"
path = "src/bin/077.rs"

[[bin]]
name = "078"
path = "src/bin/078.rs"

[[bin]]
name = "079"
path = "src/bin/079.rs"

[[bin]]
name = "080"
path = "src/bin/080.rs"

[[bin]]
name = "081"
path = "src/bin/081.rs"

[[bin]]
name = "082"
path = "src/bin/082.rs"

[[bin]]
name = "083"
path = "src/bin/083.rs"

[[bin]]
name = "084"
path = "src/bin/084.rs"

[[bin]]
name = "085"
path = "src/bin/085.rs"

[[bin]]
name = "086"
path = "src/bin/086.rs"

[[bin]]
name = "087"
path = "src/bin/087.rs"

[[bin]]
name = "088"
path = "src/bin/088.rs"

[[bin]]
name = "089"
path = "src/bin/089.rs"

[[bin]]
name = "090"
path = "src/bin/090.rs"

[[bin]]
name = "091"
path = "src/bin/091.rs"

[[bin]]
name = "092"
path = "src/bin/092.rs"

[[bin]]
name = "093"
path = "src/bin/093.rs"

[[bin]]
name = "094"
path = "src/bin/094.rs"

[[bin]]
name = "095"
path = "src/bin/095.rs"

[[bin]]
name = "096"
path = "src/bin/096.rs"

[[bin]]
name = "097"
path = "src/bin/097.rs"

[[bin]]
name = "098"
path = "src/bin/098.rs"

[[bin]]
name = "099"
path = "src/bin/099.rs"

[[bin]]
name = "100"
path = "src/bin/100.rs"

[[bin]]
name = "101"
path = "src/bin/101.rs"

[[bin]]
name = "102"
path = "src/bin/102.rs"

[[bin]]
name = "103"
path = "src/bin/103.rs"

[[bin]]
name = "104"
path = "src/bin/104.rs"

[[bin]]
name = "105"
path = "src/bin/105.rs"

[[bin]]
name = "106"
path = "src/bin/106.rs"

[[bin]]
name = "107"
path = "src/bin/107.rs"

[[bin]]
name = "108"
path = "src/bin/108.rs"
